<resources>
    <string name="app_name">Khaalis Milk</string>

    <string name="Main_Heading">Welcome to Khaalis Milk Ordering App</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="action_settings">Settings</string>
    <string name="Subscription_text">Subscribe for daily delivery</string>
    <string name="Account_History">Accounts History</string>
    <string name="Order_Settings">Settings</string>
    <string name="Complains">Complaints</string>
    <string name="loginbtn">Log in</string>
    <string name="signupbtn">Sign up</string>
    <string name="title_activity_demoactitvty">demoactitvty</string>


    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>

    </string-array>

    <string-array name="year_array">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>

    </string-array>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_demo">Sign in</string>
    <string name="town_spiner">Select Town</string>


</resources>
